<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/project_criteria_alternative_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/criteria_name"
            />

        <TextView
            android:id="@+id/project_criteria_alternative_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="italic"
            android:text="@string/criteria_sub"
            />

        <TextView
            android:id="@+id/project_criteria_alternative_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/criteria_desc"
            />

    </LinearLayout>

    <ImageButton
        android:id="@+id/criteria_edit_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/menu_project_edit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

</LinearLayout>