<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.project.create.project.ProjectCreateFragment"
    >

    <TextView
        android:id="@+id/text_project_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/project_create_textinput_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@id/project_create_textinput_edittext_description"
        app:errorTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:helperText="@string/project_name_helper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/project_create_textinput_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="no"
            android:hint="@string/project_name"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/project_create_textinput_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:helperText="@string/project_desc_helper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/project_create_textinput_edittext_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="no"
            android:hint="@string/project_description"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/project_create_button_next"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        />

</LinearLayout>