<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aem.sheap_reloaded.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"
        >
        <action
            android:id="@+id/action_nav_home_to_login_sign_up"
            app:destination="@id/nav_account_login_signup"
            />
        <action
            android:id="@+id/action_nav_home_to_profile"
            app:destination="@id/nav_account_profile"
            />
        <action
            android:id="@+id/action_nav_home_to_project_list"
            app:destination="@id/nav_project_list"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_account_login_signup"
        android:name="com.aem.sheap_reloaded.ui.user.container.UserContainerFragment"
        android:label="@string/menu_account_login_sign_up"
        tools:layout="@layout/fragment_user_container"
        >
        <action
            android:id="@+id/action_nav_account_login_signup_to_home"
            app:popUpTo="@id/nav_home"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_account_profile"
        android:name="com.aem.sheap_reloaded.ui.user.profile.ProfileFragment"
        android:label="@string/menu_account_profile"
        tools:layout="@layout/fragment_user_profile"
        >
        <action
            android:id="@+id/action_nav_profile_to_home_logout"
            app:destination="@id/nav_home"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_project_list"
        android:name="com.aem.sheap_reloaded.ui.project.list.ProjectListFragment"
        android:label="@string/menu_project_list"
        tools:layout="@layout/fragment_project_list"
        >
        <action
            android:id="@+id/action_nav_project_list_to_create"
            app:destination="@id/nav_project_create"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_project_create"
        android:name="com.aem.sheap_reloaded.ui.project.create.project.ProjectCreateFragment"
        android:label="@string/menu_project_create"
        tools:layout="@layout/fragment_project_create"
        >
        <action
            android:id="@+id/action_nav_project_create_to_create_criteria"
            app:destination="@+id/nav_project_create_criteria"
            app:popUpTo="@id/nav_project_create"
            app:popUpToInclusive="true"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_project_create_criteria"
        android:name="com.aem.sheap_reloaded.ui.project.create.criteria.CriteriaFragment"
        android:label="Create Criteria"
        tools:layout="@layout/fragment_project_create_criteria"
        >
    </fragment>


</navigation>